--- a/public/variables.css
+++ b/public/variables.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins');
 
 :root {
-    --primary: #f44b5a;
+    --primary: #5077f7;
 
     --background: #31313a;
     --mid-dark-background: #16161a;
